# app/company/controller.go
@@ -15,6 +15,7 @@ func NewController(service ServiceInterface) *Controller {
 
 type ControllerInterface interface {
 	FindAllCompanies(ctx *gin.Context)
+	FindById(ctx *gin.Context)
 }
 
 // FindAllCompanies godoc
@@ -33,4 +34,25 @@ func (c Controller) FindAllCompanies(ctx *gin.Context) {
 		ctx.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 	}
 	ctx.JSON(200, companies)
+}
+
+// FindById godoc
+//
+//	@Summary	find by id
+//	@Schemes
+//	@Description	find by id
+//	@Param			id	path	string	true	"the user to create"
+//
+// @Tags			company
+// @Accept			json
+// @Produce		json
+// @Success		200	{object}	Company
+// @Router			/companies/{id} [get]
+func (c Controller) FindById(ctx *gin.Context) {
+	company, err := c.service.FindById(ctx, ctx.Param("id"))
+	if err != nil {
+		ctx.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+	ctx.JSON(200, company)
 }
