# docs/swagger.yaml
@@ -2,6 +2,9 @@ basePath: /
 definitions:
   appointment.Appointment:
     properties:
+      createdAt:
+        description: Automatically managed by GORM for creation time
+        type: string
       customer_id:
         type: string
       id:
@@ -10,6 +13,9 @@ definitions:
         type: string
       service_id:
         type: string
+      updatedAt:
+        description: Automatically managed by GORM for update time
+        type: string
     type: object
   company.Company:
     properties:
@@ -17,20 +23,73 @@ definitions:
         type: string
       address_line_2:
         type: string
+      createdAt:
+        description: Automatically managed by GORM for creation time
+        type: string
       id:
         type: string
       name:
+        type: string
+      updatedAt:
+        description: Automatically managed by GORM for update time
+        type: string
+    type: object
+  core.LocalizedMessage:
+    additionalProperties:
+      type: string
+    type: object
+  operation.Operation:
+    properties:
+      createdAt:
+        description: Automatically managed by GORM for creation time
+        type: string
+      description:
+        $ref: '#/definitions/core.LocalizedMessage'
+      id:
+        type: string
+      name:
+        $ref: '#/definitions/core.LocalizedMessage'
+      service_operation_id:
+        type: string
+      updatedAt:
+        description: Automatically managed by GORM for update time
+        type: string
+    type: object
+  operation.ServiceOperation:
+    properties:
+      createdAt:
+        description: Automatically managed by GORM for creation time
+        type: string
+      id:
+        type: string
+      name:
+        $ref: '#/definitions/core.LocalizedMessage'
+      operations:
+        items:
+          $ref: '#/definitions/operation.Operation'
+        type: array
+      updatedAt:
+        description: Automatically managed by GORM for update time
         type: string
     type: object
   servicerequest.ServiceRequest:
     properties:
+      createdAt:
+        description: Automatically managed by GORM for creation time
+        type: string
       id:
         type: string
       name:
         type: string
+      updatedAt:
+        description: Automatically managed by GORM for update time
+        type: string
     type: object
   user.User:
     properties:
+      createdAt:
+        description: Automatically managed by GORM for creation time
+        type: string
       email:
         type: string
       first_name:
@@ -38,6 +97,9 @@ definitions:
       id:
         type: string
       last_name:
+        type: string
+      updatedAt:
+        description: Automatically managed by GORM for update time
         type: string
     type: object
   user.UserCreate:
@@ -83,11 +145,17 @@ definitions:
     type: object
   vehicle.Vehicle:
     properties:
+      createdAt:
+        description: Automatically managed by GORM for creation time
+        type: string
       id:
         type: string
       make:
         type: string
       model:
+        type: string
+      updatedAt:
+        description: Automatically managed by GORM for update time
         type: string
       year:
         type: integer
@@ -134,6 +202,44 @@ paths:
       summary: find all companies
       tags:
       - company
+  /companies/{id}:
+    get:
+      consumes:
+      - application/json
+      description: find by id
+      parameters:
+      - description: the user to create
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/company.Company'
+      summary: find by id
+      tags:
+      - company
+  /operations:
+    get:
+      consumes:
+      - application/json
+      description: find all garage operations
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/operation.ServiceOperation'
+            type: array
+      summary: find all garage operations
+      tags:
+      - operation
   /service-requests:
     get:
       consumes:
